=======
CHANGES
=======


0.4 (unreleased)
----------------


0.3 (2008-08-29)
----------------

* Added general text documents to project root.

